<resources>
    <string name="app_name">ContactApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sample_sender">Edurila.com</string>
    <string name="sample_title">$19 Only (First 10 spots) - Bestselling</string>
    <string name="sample_brief">Are you looking to Learn Web Designing</string>
    <string name="sample_date">12:34 PM</string>
    <string name="sample_description">Avatar</string>
</resources>